# xrsfm

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CMakeHelper.cmake  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_CN.md  SelectCudaComputeArch.cmake  config_kitti copy.json  config_kitti.json  config_mat.json  config_mix.json  config_open.json  config_seq.json  config_tri.json  config_uno.json  git-mailmap  run_kitti.sh  test.info
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  lint.yml
docs/en/: Installation.md  TODO  additional_licenses.md  api.md  benchmark.md  faq.md  installation.md  introduction.md  tutorial.md
docs/zh/: benchmark.md  faq.md  installation.md  introduction.md  tutorial.md
scripts/: auto_reconstruction.py  eval_kitti.py  eval_results.py  extract_camera_info.py  pointcloud_color_calculator.py  read_ecim.py  read_log.py  run_1dsfm_matching.py  run_1dsfm_reconstruction.py  run_kitti.py  run_kitti_matching.py  run_kitti_reconstruction.py  run_test_data.py  run_uno.py
src/: cvt_uno.cc  debug_kitti.cc  draw_mix.cc  estimate_scale.cc  rec_1dsfm.cc  rec_kitti.cc  rec_seq.cc  run_kitti_debug.cc  run_kitti_simple.cc  run_matching.cc  run_mix.cc  run_reconstruction.cc  run_seq.cc  run_seq_kitti.cc  run_triangulation.cc  run_uno.cc  run_uno_simple.cc  tag_extract.cc  tag_refine.cc  test.cc  unpack_collect_data.cc  view_loc.cc  view_loc_result.cc
src/base/: camera.h  camera.hpp  camera_model.hpp  map.cc  map.h  types.h
src/feature/: feature_extraction.cc  feature_processing.cc  feature_processing.h  match_expansion.cc  match_expansion.h  orb_extractor.cc  orb_extractor.h  sift_extractor.cc  sift_extractor.h
src/geometry/: epipolar_geometry.hpp  error_corrector.cc  error_corrector.h  error_detector.cc  essential.cc  essential.h  map_initializer.cc  map_initializer.h  pnp.cc  pnp.h  track_processor.cc  track_processor.h  triangluate_svd.cc  triangluate_svd.h  umeyama.h
src/geometry/colmap/: polynomial.h  triangulation.h  utils.cc
src/geometry/colmap/base/: camera.h  pose.cc  pose.h  triangulation.cc  triangulation.h
src/geometry/colmap/estimators/: absolute_pose.cc  absolute_pose.h  fundamental_matrix.cc  fundamental_matrix.h  polynomial.cc  polynomial.h  triangulation.cc  triangulation.h  utils.cc  utils.h
src/geometry/colmap/optim/: combination_sampler.cc  combination_sampler.h  loransac.h  random_sampler.cc  random_sampler.h  ransac.h  sampler.h  support_measurement.cc  support_measurement.h
src/geometry/colmap/util/: alignment.h  endian.h  logging.cc  logging.h  math.cc  math.h  misc.cc  misc.h  random.cc  random.h  string.cc  string.h  types.h
src/geometry/find_fundam/: fundam.cpp  fundam.hpp  precomp.hpp  ptsetreg.cpp
src/mapper/: incremental_mapper.cc  incremental_mapper.h
src/optimization/: ba_solver.cc  ba_solver.h  cost_factor_ceres.h  lie_algebra.h
src/optimization/mgba/: matrix_math.h  obs.h  run_ba.cc  run_ba_ceres.cc  timer.h  type_mg.h
src/optimization/mgba/optim/: ba_block.h  ceres_cost_function.h  linear_solver.cc  linear_solver.h  linear_solver_refine.cc  linear_solver_weight.cc  lm_minimizer.cc  lm_minimizer.h  local_parameterization.cc  local_parameterization.h
src/tag/: tag_extract.hpp
src/test/: feature_test.cc  geometry_test.cc  optimization_test.cc  reconstruction_test.cc
src/utility/: global.h  io_base.hpp  io_ecim.cc  io_ecim.hpp  io_feature.hpp  random.h  timer.h  view.cc  view.h  viewer.cc  viewer.h  viewer_handle.h  viewer_handler.cc
